<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:gravity="center|end"
        android:textSize="50sp"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/tv_sign"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:textAlignment="textEnd"
        android:textColor="@color/colorWhite"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_clear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorAccent"
            android:onClick="clearField"
            android:text="@string/c"
            android:textAllCaps="true"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btn_open_paren"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorAccent"
            android:onClick="clickPower"
            android:text="@string/power"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn_close_paren"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorAccent"
            android:onClick="clickSqrRoot"
            android:text="@string/square_root"
            android:textSize="40sp" />

        <ImageButton
            android:id="@+id/btn_delete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="clearChar"
            android:src="@drawable/ic_delete"
            tools:ignore="ContentDescription,NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_seven"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorWhite"
            android:onClick="clickSeven"
            android:text="@string/_7"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btn_eight"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorWhite"
            android:onClick="clickEight"
            android:text="@string/_8"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_nine"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorWhite"
            android:onClick="clickNine"
            android:text="@string/_9"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_plus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorAccent"
            android:onClick="clickPlus"
            android:text="@string/plus"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_four"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorWhite"
            android:onClick="clickFour"
            android:text="@string/_4"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btn_five"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorWhite"
            android:onClick="clickFive"
            android:text="@string/_5"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_six"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorWhite"
            android:onClick="clickSix"
            android:text="@string/_6"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_minus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorAccent"
            android:onClick="clickMinus"
            android:text="@string/minus"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_one"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorWhite"
            android:onClick="clickOne"
            android:text="@string/_1"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btn_two"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorWhite"
            android:onClick="clickTwo"
            android:text="@string/_2"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_three"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorWhite"
            android:onClick="clickThree"
            android:text="@string/_3"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_cross"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorAccent"
            android:onClick="clickCross"
            android:text="@string/cross"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_dot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorAccent"
            android:onClick="clickDot"
            android:text="@string/dot"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btn_zero"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorWhite"
            android:onClick="clickZero"
            android:text="@string/_0"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_equal"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorAccent"
            android:onClick="clickEqual"
            android:text="@string/equal"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_division"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg"
            android:textColor="@color/colorAccent"
            android:onClick="clickDivision"
            android:text="@string/division"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>